--- a/less/home-page.less
+++ b/less/home-page.less
@@ -1,8 +1,11 @@
 // Home Content
 
 .home {
-  padding-top: 96px;
+  padding-top: 92px;
 
+  @media @phone {
+    padding-top: 100px;
+  }
 
   .intro {
 
