--- a/less/variables.less
+++ b/less/variables.less
@@ -34,7 +34,7 @@
 
 
 // Mobile var
-@phone: (max-width: 500px);
+@phone: ~"(max-width: 500px)";
 
 // nav variable
 @nav_hov: #769BEB;
